<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expend_detail"
            android:textSize="20sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/txtNombreResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_exp2" />

        <TextView
            android:id="@+id/txtMontoResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount2"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/txtDescripcionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descript"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/txtFijoResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasto_fijo2"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</ScrollView>
